<resources>
    <string name="app_name">WeatherApp</string>

    <string name="search_city">Search city</string>
    <string name="search_hint">Enter city name</string>

    <string name="temperature">Temperature</string>
    <string name="feelsLike">Feels like</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="temperatureDeg">Temperature, °C</string>
    <string name="feelsLikeDeg">Feels like, °C</string>
    <string name="humidity">Humidity, %</string>
    <string name="pressure">Pressure, mm Hg</string>
    <string name="dewPoint">Dew point, °C</string>
    <string name="clouds">Clouds, %</string>
    <string name="windSpeed">Wind speed, m/s</string>
    <string name="windGust">Wind gust, m/s</string>
    <string name="windDirection">Wind direction</string>
    <string name="visibility">Visibility, m</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="uvi">UV index</string>
    <string name="rain">Rain, mm</string>
    <string name="snow">Snow, mm</string>

    <string name="temperatureMin">Min temperature, °C</string>
    <string name="temperatureMax">Max temperature, °C</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="wind">Wind</string>

    <string name="currentWeather">Current weather</string>
    <string name="twoDaysWeather">Two days forecast</string>
    <string name="sevenDaysWeather">Seven days forecast</string>
    <string name="details">Details</string>
    <string name="search">Search</string>
</resources>
