<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/nav_currentWeather">

    <fragment android:id="@+id/nav_currentWeather"
        android:name="ru.awawa.weatherapp.ui.main.current.CurrentWeather"
        android:label="@string/currentWeather"
        tools:layout="@layout/fragment_main_layout"/>

    <fragment android:id="@+id/nav_search"
        android:name="ru.awawa.weatherapp.ui.main.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search_layout"/>

    <fragment android:id="@+id/nav_two_days"
        android:name="ru.awawa.weatherapp.ui.main.hourly.TwoDaysWeatherFragment"
        android:label="@string/twoDaysWeather"
        tools:layout="@layout/fragment_two_days_layout"/>

    <fragment android:id="@+id/nav_seven_days"
        android:name="ru.awawa.weatherapp.ui.main.daily.SevenDaysWeatherFragment"
        android:label="@string/sevenDaysWeather"
        tools:layout="@layout/fragment_seven_days_layout">
        <action android:id="@+id/action_details"
            app:destination="@id/nav_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment android:id="@+id/nav_details"
        android:name="ru.awawa.weatherapp.ui.main.daily.details.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details_layout">
        <argument android:name="position"
            app:argType="integer"
            android:defaultValue="0"
            app:nullable="false"/>
    </fragment>

</navigation>